# vape-station

./: .gitignore  CMakeLists.txt  README.md  build_and_copy_mac.sh  deploy.sh
.github/workflows/: build.yml  windows.yml
.wrangler/cache/: pages.json
Source/: GrainTables.cpp  GrainTables.h  GrainVoice.cpp  GrainVoice.h  Lfo.h  ModMatrix.h  Params.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: MatrixPanel.cpp  MatrixPanel.h  ModKnob.cpp  ModKnob.h  PluginEditor.cpp  PluginEditor.h  SourceChip.h  TableViz.cpp  TableViz.h  Theme.h  VapeKeyboard.h
Tests/: RenderTest.cpp
docs/: session-2026-07-08.md
docs/reaktor-port/: build-guide.md
docs/superpowers/plans/: 2026-07-14-reaktor-port.md
docs/superpowers/specs/: 2026-07-14-reaktor-port-design.md
webapp/: _headers  index.html  serve.sh
webapp/js/: engine.js  params.js  ui.js  version.js  worklet.js
webapp/test/: render-test.mjs
webapp/tools/: export-reaktor-tables.mjs
